default page... pita

--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,7 @@ include:
   - _files
 # display dynamic modified dates
 plugins:
-  - jekyll-last-modified-at
+  - jekyll-sitemap
+
+site:
+  - about: _posts/2019-1-14-About-Me.md
